# request-a-service-record

./: .gitignore  config.py  create_database.py  docker-compose.yml  flask_app.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/actions/node-tests/: action.yml
.github/actions/playwright-tests/: action.yml
.github/actions/python-tests/: action.yml
.github/workflows/: cd.yml  pr.yml
app/: __init__.py  constants.py
app/content/: content.yaml
app/example_flow/: __init__.py  form.py  routes.py
app/forms/: __init__.py  pizza_brand.py  pizza_or_chocolcate.py  pizza_topping.py  type_of_chocolate.py
app/lib/: aws.py  content.py  db_handler.py  dynamics_handler.py  gov_uk_pay.py  models.py  requires_session_key.py  state_machine.py  state_machine_decorator.py  util.py
app/lib/middleware/: routing_middleware.py
app/lib/state_machine/: state_machine.py  state_machine_decorator.py
app/main/: __init__.py  request_a_service_record.py  routes.py  routes_multiple_forms_journey.py  routes_shared_by_both_approaches.py  routes_single_form_journey.py
app/main/forms/: is_service_person_alive.py  proceed_to_pay.py  request_a_service_record.py  service_branch.py  start_now.py
app/main/routes/: routes_multiple_forms_journey.py  (+1 more)
app/templates/: base.html
docs/: flow.py
src/scripts/: main.js
test/content/: test_get_field_content.py  test_prepare_country_options.py
test/main/: test_aws.py  test_database.py  test_gov_uk.py  test_routes.py
test/playwright/: prevent-direct-mid-journey-access.spec.ts  start.spec.ts
(+20 files in other folders)
